--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Demo Tech innovation
+title: Blog
 description: A tech innovation for The itHelp Project  
 keywords: Modern, Blogging, Fun
 author: Wferr
